--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,9 @@ ClientBin/
 *.pfx
 *.publishsettings
 node_modules/
+__pycache__/
+/test/*
+!/test/README.md
 
 # RIA/Silverlight projects
 Generated_Code/
