--- a/.gitignore
+++ b/.gitignore
@@ -161,8 +161,9 @@ ClientBin/
 *.publishsettings
 node_modules/
 __pycache__/
-/test/*
-!/test/README.md
+/src/test/*
+!/src/test/README.md
+.env
 
 # RIA/Silverlight projects
 Generated_Code/
